wcfsetup/install/files/acp/style/layout.scss
$wcfAcpMenuWidth: 150px;

.layoutBoundary {
	margin: 0;
	max-width: none;
	min-width: 0;
}

.pageContainer {
	@include screen-lg {
		min-width: 1240px;
	}
}

/* page header */
.pageHeaderContainer {
	@include screen-lg {
		.pageHeader .layoutBoundary {
			background-color: rgb(44, 62, 80);
			height: 50px;
			padding: 0 10px 0 0;
		}
		
		.pageHeaderLogo {
			background-color: rgb(52, 73, 94);
			flex: 0 0 $wcfAcpMenuWidth;
			height: 50px;
			margin: 0;
			order: 1;
			position: relative;
			
			.pageHeaderLogoLarge {
				display: none;
			}
			
			.pageHeaderLogoSmall {
				display: inline;
				max-height: 30px;
			}
			
			> a {
				align-items: center;
				bottom: 0;
				display: flex;
				justify-content: center;
				left: 0;
				position: absolute;
				right: 0;
				top: 0;
			}
		}
		
		.mainMenu {
			flex: 0 0 auto;
			order: 2;
		}
		
		.pageHeaderSearch {
			flex: 0 0 auto;
			margin-bottom: 0;
			order: 3;
			
			// force to take up the full available height
			/*position: relative;
			top: -10px;*/
			
			.pageHeaderSearchType > .button {
				background-color: rgba(0, 0, 0, .2);
				color: $wcfHeaderSearchBoxPlaceholderActive;
				align-items: center;
				border-radius: 0;
				display: flex;
				height: 50px;
				padding: 6px 28px 6px 10px;
				
				&::after {
					right: 10px;
				}
				
				&:hover {
					background-color: rgba(0, 0, 0, .4);
				}
			}
			
			.pageHeaderSearchInputContainer {
				background-color: $wcfHeaderMenuLinkBackground;
				border-radius: 0;
				box-shadow: none;
				padding: 0;
			}
			
			.pageHeaderSearchInput {
				height: 50px;
				width: 300px !important;
				
				background-color: transparent;
				color: $wcfHeaderMenuLinkActive;
				padding: 6px 8px;
				
				&:hover,
				&:focus {
					background-color: rgba(0, 0, 0, .1);
				}
			}
			
			.pageHeaderSearchInputButton {
				display: none;
			}
		}
		
		.userPanel {
			flex: 1 1 auto;
			order: 4;
		}
	}
	
	@include screen-md-down {
		max-width: 100vw;
	}
}

.acpSearchDropdown {
	border-width: 0;
	top: 50px !important;
	width: 300px;
	
	&::before,
	&::after {
		display: none;
	}
}


.acpPageContentContainer {
	display: flex;
	flex: 1 0 auto;
}

@include screen-lg {
	.acpPageMenu .icon, .acpPageSubMenu .icon {
		color: inherit;
	}
	
	.acpPageMenu {
		background-color: rgb(44, 62, 80);
		flex: 0 0 $wcfAcpMenuWidth;
		text-align: center;
		overflow: hidden;
		
		.acpPageMenuLink {
			color: rgb(192, 192, 192);
			display: block;
			padding: 20px 10px;
			
			&.active {
				background-color: rgb(34, 49, 63);
				color: rgb(255, 255, 255);
				
				> .icon {
					transform: scale(1);
				}
			}
			
			> .icon {
				transform: scale(.8);
				transition: transform .12s linear;
			}
		}
		
		.acpPageMenuItemLabel {
			display: block;
			margin-top: 5px;
		}
	}
	
	.acpPageSubMenu {
		background-color: rgb(34, 49, 63);
		flex: 0 0 auto;
	}
	
	.acpPageSubMenuCategoryList {
		flex: 0 0 300px;
		overflow: hidden;
		width: 300px;
		
		&:not(.active) {
			display: none;
		}
		
		> .acpPageSubMenuCategory {
			margin-top: 20px;
			padding-left: 20px;
			
			> span {
				color: rgb(169, 169, 169);
				display: block;
				padding: 5px 20px;
				text-transform: uppercase;
			}
			
			&:last-child {
				margin-bottom: 20px;
			}
		}
		
		.acpPageSubMenuLink,
		.acpPageSubMenuIcon {
			color: rgb(255, 255, 255);
			display: block;
			overflow: hidden;
			padding: 5px 20px;
			text-overflow: ellipsis;
			white-space: nowrap;
		}
		
		.acpPageSubMenuLink:hover,
		.acpPageSubMenuLink:hover ~ .acpPageSubMenuIcon:not(.active),
		.acpPageSubMenuIcon:hover {
			background-color: rgb(52, 73, 94);
		}
		
		.acpPageSubMenuLinkWrapper {
			display: flex;
			
			> .acpPageSubMenuLink {
				flex: 1 1 auto;
			}
			
			> .acpPageSubMenuIcon {
				flex: 0 0 auto;
			}
		}
		
		.acpPageSubMenuItemList > .active > a,
		.acpPageSubMenuLink.active,
		.acpPageSubMenuLink.active ~ .acpPageSubMenuIcon,
		.acpPageSubMenuIcon.active {
			background-color: rgb(255, 255, 255) !important;
			color: rgb(44, 62, 80) !important;
		}
	}
}

@include screen-md-down {
	.mainMenu {
		order: 1;
	}
	
	.pageHeaderLogo {
		order: 2;
	}
	
	.userPanel {
		order: 3;
	}
	
	.acpPageMenu,
	.acpPageSubMenu {
		display: none;
	}
}

.main {
	flex: 1 1 auto;
	
	@include screen-lg {
		padding: 40px 0;
	}
	
	@include screen-md-down {
		padding: 20px 0;
	}
}

.pageFooter {
	box-shadow: 0 0 10px rgba(0, 0, 0, .6);
}

.codemirrorToolbar {
	background-color: rgb(52, 73, 94);
	display: flex;
	flex-wrap: wrap;
	
	> li {
		flex: 0 0 auto;
		margin-bottom: 1px;
		
		> a {
			color: rgb(255, 255, 255);
			display: block;
			font-size: 12px;
			outline: none;
			padding: 10px;
			text-align: center;
			font-weight: 400;
			
			&:hover {
				background-color: rgb(19, 34, 48);
			}
			
			.icon {
				color: inherit;
			}
		}
	}
}

.CodeMirror {
	word-wrap: normal;
}

#styleLogo,
#styleLogoMobile {
	background-color: #fff;
	background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAQMAAAAlPW0iAAAABlBMVEX////MzMw46qqDAAAAD0lEQVQI12P4z4Ad4ZAAAH6/D/Hgw85/AAAAAElFTkSuQmCC);
	border: 1px solid #ccc;
}

